--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 </head>
 <body>
   
-<div id="chloropleth_map"></div>
+<div id="choropleth_map"></div>
 
 <script type="text/javascript">
 
   var spec2 = "js/week9homework.vg.json";
-  vegaEmbed('#chloropeth_plot', spec2).then(function(result) {
+  vegaEmbed('#choropleth_map', spec2).then(function(result) {
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
   }).catch(console.error);
 </script>
