--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             
             <h2>Number of Medals by Country</h2>
 
-            <div class="pure-g" a>
+            <div class="pure-g" >
               <div class="pure-u-1-1">
                 <div id="choropleth_map"></div>
               </div>
